--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,11 @@
 {
   "files.exclude": {
     "**/node_modules/": true
+  },
+  "emmet.showSuggestionsAsSnippets": true,
+  "editor.quickSuggestions": {
+    "other": true,
+    "comments": false,
+    "strings": false
   }
 }
