--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -1,8 +1,20 @@
 version: "0.2"
 words:
+  - ˈkweɪ
   - afdian
+  - Boshen
+  - Ikuta
   - Lichter
+  - Morote
   - naito
   - naitokosuke
   - Natsuki
+  - Nozomu
+  - nuxt
+  - Parsa
+  - Pooya
+  - Quarsar
+  - Rspack
+  - Turborepo
+  - Vuetify
   - Zenn
