--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -3,18 +3,30 @@ words:
   - ˈkweɪ
   - afdian
   - Boshen
+  - Broooooklyn
+  - Hiroshi
   - Ikuta
+  - joshi
+  - Leproux
   - Lichter
   - Morote
   - naito
   - naitokosuke
+  - NAPI
   - Natsuki
   - Nozomu
   - nuxt
+  - Ogawa
+  - oxlint
   - Parsa
   - Pooya
+  - Qing
   - Quarsar
   - Rspack
+  - Sébastien
   - Turborepo
+  - vuejs
   - Vuetify
+  - Xiangjun
+  - Yunfei
   - Zenn
