--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "textlint": "^15.2.1",
+    "textlint-filter-rule-comments": "^1.2.2",
     "textlint-filter-rule-node-types": "^1.1.0",
     "textlint-rule-no-dropping-the-ra": "^3.0.0",
     "textlint-rule-preset-ai-writing": "^1.1.0",
