--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -19,16 +19,21 @@ words:
   - Ogawa
   - oxlint
   - Parsa
+  - piña
   - Pooya
   - Qing
   - Quarsar
   - Rspack
+  - rstore
   - Sébastien
   - slidev
+  - swrv
   - Turborepo
   - vuefes
   - vuejs
   - Vuetify
   - Xiangjun
+  - Yogo
+  - Yuichi
   - Yunfei
   - Zenn
