--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -21,6 +21,7 @@ words:
   - Parsa
   - piña
   - Pooya
+  - posva
   - Qing
   - Quarsar
   - Rspack
@@ -29,6 +30,7 @@ words:
   - slidev
   - swrv
   - Turborepo
+  - unplugin
   - vuefes
   - vuejs
   - Vuetify
