--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "textlint articles/*.md",
     "lint:fix": "textlint --fix articles/*.md",
+    "new": "nlx zenn new:article",
     "dev": "nlx zenn preview"
   },
   "keywords": [],
