--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -7,6 +7,7 @@ words:
   - Hiroshi
   - Ikuta
   - joshi
+  - jsfiddle
   - Leproux
   - Lichter
   - Morote
@@ -16,6 +17,7 @@ words:
   - Natsuki
   - Nozomu
   - nuxt
+  - nuxtjs
   - Ogawa
   - oxlint
   - Parsa
@@ -29,7 +31,9 @@ words:
   - Sébastien
   - slidev
   - swrv
+  - todde
   - Turborepo
+  - unocss
   - unplugin
   - vuefes
   - vuejs
