--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "textlint articles/*.md",
     "lint:fix": "textlint --fix articles/*.md",
-    "new": "nlx zenn new:article",
-    "dev": "nlx zenn preview"
+    "new": "nlx zenn-cli@latest new:article",
+    "dev": "nlx zenn-cli@latest preview"
   },
   "keywords": [],
   "author": "",
