intro vue bits (#21)
* Init new article

* 😎VIBE WRITING😎

* cspell

* chore: update

* chore: update

* chore

* chore

* chore

* chore

* chore

* cspell

* update

* wip

* wip

* wip

* wip

* wip

* fix

* wip

* wip

* wip

* chore

--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -8,6 +8,7 @@ words:
   - Ikuta
   - joshi
   - jsfiddle
+  - jsrepo
   - Leproux
   - Lichter
   - Morote
@@ -29,6 +30,7 @@ words:
   - Rspack
   - rstore
   - Sébastien
+  - shadcn
   - slidev
   - swrv
   - todde
