--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "textlint articles/*.md",
     "lint:fix": "textlint --fix articles/*.md",
-    "new": "nlx zenn-cli@latest new:article",
-    "dev": "nlx zenn-cli@latest preview"
+    "new": "zenn new:article",
+    "dev": "zenn preview"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +20,7 @@
     "textlint-rule-no-dropping-the-ra": "^3.0.0",
     "textlint-rule-preset-ai-writing": "^1.1.0",
     "textlint-rule-preset-ja-spacing": "^2.4.3",
-    "textlint-rule-preset-ja-technical-writing": "^12.0.2"
+    "textlint-rule-preset-ja-technical-writing": "^12.0.2",
+    "zenn-cli": "^0.2.11"
   }
 }
