--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "textlint articles/*.md",
-    "lint:fix": "textlint --fix articles/*.md",
+    "lint": "textlint",
+    "lint:all": "textlint articles/*.md",
+    "fmt": "textlint --fix",
+    "fmt:all": "textlint --fix articles/*.md",
     "new": "zenn new:article",
     "dev": "zenn preview"
   },
