--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint:all": "textlint articles/*.md",
     "fmt": "textlint --fix",
     "fmt:all": "textlint --fix articles/*.md || true",
-    "new": "zenn new:article",
+    "new": "slug=$1 && zenn new:article --slug $slug && mkdir -p images/$slug && touch images/$slug/.gitkeep",
     "dev": "zenn preview"
   },
   "keywords": [],
@@ -23,5 +23,8 @@
     "textlint-rule-preset-ja-spacing": "^2.4.3",
     "textlint-rule-preset-ja-technical-writing": "^12.0.2",
     "zenn-cli": "^0.2.11"
+  },
+  "dependencies": {
+    "gunshi": "^0.27.4"
   }
 }
