--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "description": "",
   "devDependencies": {
     "@gunshi/docs": "^0.27.4",
+    "bun-types": "^1.3.5",
     "textlint": "^15.2.1",
     "textlint-filter-rule-comments": "^1.2.2",
     "textlint-filter-rule-node-types": "^1.1.0",
@@ -25,6 +26,7 @@
     "textlint-rule-preset-ai-writing": "^1.1.0",
     "textlint-rule-preset-ja-spacing": "^2.4.3",
     "textlint-rule-preset-ja-technical-writing": "^12.0.2",
+    "typescript": "^5.9.3",
     "zenn-cli": "^0.2.11"
   },
   "dependencies": {
