--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -29,11 +29,13 @@ words:
   - Pooya
   - posva
   - Qing
+  - Qingchuan
   - Quarsar
   - Rspack
   - rstore
   - Sébastien
   - shadcn
+  - Shen
   - slidev
   - swrv
   - todde
